--- a/liferea/.config/liferea/liferea.css
+++ b/liferea/.config/liferea/liferea.css
@@ -1,6 +1,7 @@
 /* Beautiful Helvetica throughout. */
 * {
     font-family: "Nimbus Sans L", FreeSans, Helvetica, Arial, sans-serif;
+    font-size: 10pt;
 }
 
 /* Item body/description */
