Set explicit font-size in Liferea.

--- a/liferea/.config/liferea/liferea.css
+++ b/liferea/.config/liferea/liferea.css
@@ -1,7 +1,7 @@
 /* Beautiful Helvetica throughout. */
 * {
     font-family: "Nimbus Sans L", FreeSans, Helvetica, Arial, sans-serif;
-    font-size: 10pt;
+    font-size: 10px;
 }
 
 /* Item body/description */
