--- a/liferea/.config/liferea/liferea.css
+++ b/liferea/.config/liferea/liferea.css
@@ -53,3 +53,10 @@ a:hover {
 .subarticlepay {
   display: none;
 }
+
+/* Substack subscription button. */
+.button,
+.primary,
+.button-wrapper {
+  display: none;
+}
