--- a/liferea/.config/liferea/liferea.css
+++ b/liferea/.config/liferea/liferea.css
@@ -3,6 +3,7 @@
   color: #eee !important;
   background-color: #333 !important;
   border-color: #666 !important;
+  line-height: 150%;
 }
 
 /* Item body and description. */
